--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProShop</title>
+    <script async src="https://umamu-heroku-73ea1cde9cda.herokuapp.com/script.js" data-website-id="aead37b6-9020-48d0-95bf-ae3443a1b72d"></script>
   </head>
   <body>
     <div id="root"></div>
